<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (c) 2015 Albert C. Braun
    *
    * Licensed under the Apache License, Version 2.0 (the "License");
    * you may not use this file except in compliance with the License.
    * You may obtain a copy of the License at
    *
    *     http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software
    * distributed under the License is distributed on an "AS IS" BASIS,
    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    * See the License for the specific language governing permissions and
    * limitations under the License.
-->
<resources>
    <string name="app_name">CMS50FWLib Test App</string>
    <string name="reset_button_text">Reset</string>
    <string name="clear_button_text">Clear Log</string>
    <string name="stopCMS50FW_button_text">Stop Data</string>
    <string name="startCMS50FW_button_text">Start Data</string>
    <string name="connect_button_text">Connect</string>
    <string name="connect_button_label">Please click connect only when CMS50FW has \'Wireless\' set to \'on\' and is within Bluetooth range of this Android device.</string>
    <string name="not_available">N/A</string>
    <string name="minimum_spo2_label_text">Minimum Allowed SpO2 Percentage:</string>
    <string name="end_user_agreement_message"><b>Please Note:</b> All responsibility and liability for using this app belong solely to the user. If you use or in any way rely upon this app, you agree that you do so at your own risk. Also be aware that heart rate values above 127 bpm are not accurately displayed by this app.</string>
    <string name="i_agree">I Agree</string>
</resources>
