<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/connect_button_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_button_label" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_button_label"
        android:onClick="connect"
        android:text="@string/connect_button_text" />

    <Button
        android:id="@+id/start_reading_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_button_label"
        android:layout_toRightOf="@id/connect_button"
        tools:ignore="RtlHardcoded"
        android:onClick="startData"
        android:text="@string/startCMS50FW_button_text"/>

    <Button
        android:id="@+id/stop_reading_data_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_button_label"
        android:layout_toRightOf="@id/start_reading_data_button"
        tools:ignore="RtlHardcoded"
        android:onClick="stopData"
        android:text="@string/stopCMS50FW_button_text"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_button_label"
        android:layout_toRightOf="@id/stop_reading_data_button"
        tools:ignore="RtlHardcoded"
        android:onClick="resetState"
        android:text="@string/reset_button_text" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_button_label"
        android:layout_toRightOf="@id/reset_button"
        tools:ignore="RtlHardcoded"
        android:onClick="clearWindow"
        android:text="@string/clear_button_text" />


    <TextView
        android:id="@+id/minimum_spo2_percentage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_button"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/minimum_spo2_label_text"
        android:textSize="@dimen/standard_text_size" />

    <TextView
        android:id="@+id/minimum_spo2_percentage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clear_button"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_toRightOf="@id/minimum_spo2_percentage_label"
        tools:ignore="RtlHardcoded"
        android:text="@string/not_available"
        android:textSize="@dimen/standard_text_size" />

    <SeekBar
        android:id="@+id/minimum_spo2_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/minimum_spo2_percentage_label"
        tools:ignore="RtlHardcoded"
        android:layout_below="@id/minimum_spo2_percentage_label"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/current_time_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minimum_spo2_percentage"
        android:layout_marginRight="30sp"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/not_available"
        android:textSize="@dimen/standard_text_size" />

    <TextView
        android:id="@+id/current_spo2_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minimum_spo2_percentage"
        android:layout_marginRight="30sp"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_toRightOf="@id/current_time_window"
        tools:ignore="RtlHardcoded"
        android:text="@string/not_available"
        android:textSize="@dimen/standard_text_size" />

    <TextView
        android:id="@+id/current_pulse_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minimum_spo2_percentage"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_toRightOf="@id/current_spo2_window"
        tools:ignore="RtlHardcoded"
        android:text="@string/not_available"
        android:textSize="@dimen/standard_text_size" />

    <ScrollView
        android:id="@+id/message_window_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_time_window"
        android:layout_marginTop="@dimen/top_margin"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/message_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize" />
    </ScrollView>

</RelativeLayout>
